Builds/alpine-label.yaml
apiVersion: v1
kind: Pod 
metadata:
  name: alpine
  namespace: default
  labels:
    running: afterLabels
spec:
  containers:
  - name: alpine
    image: alpine
    command: ["sleep", "60"]
  restartPolicy: Always
