Builds/busybox-scheduled.yaml
apiVersion: v1 
kind: Pod
metadata:
  name: busybox-sleeper
  namespace: default
spec:
  containers:
  - image: busybox
    name: busybox-sleeper
    command: ["sleep", "10"]
    imagePullPolicy: IfNotPresent
  restartPolicy: Always
  nodeSelector:
    all: ssd
