Builds/lots-of-nothing.yaml
apiVersion: apps/v1beta2
kind: Deployment 
metadata:
  name: lots-of-nothing
spec:
  selector:
    matchLabels:
      app: lots-of-nothing
  replicas: 3
  template:
    metadata:
      labels:
        app: lots-of-nothing
    spec:
      containers:
      - name: lots-of-nothing
        image: k8s.gcr.io/pause:2.0
