Builds/nginx-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: nginx-daemonset
spec:
  selector:
    matchLabels:
      daemon: nginx-daemonset
  template:
    metadata:
      labels:
        daemon: nginx-daemonset
    spec:
      tolerations:
      - key: node-role.kubernetes.io/master
        effect: NoSchedule
      containers:
      - name: nginx
        image: nginx:1.9.1
        ports:
        - containerPort: 80
