Builds/ingress-example.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: service1.example.com
    http:
      paths:
      - backend:
          serviceName: s1
          servicePort: 80
  - host: service2.example.com
    http:
      paths:    
      - backend:
          serviceName: s2
          servicePort: 80
